// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vue 3 component in a Vue 2 app reactivity 1`] = `
"<div>
  I'm Vue 2
  0

  <!---->
  <div title=\\"Attribute 0\\"> I'm Vue 3 Prop: 0
    Default slot 0

    <!---->
    Named slot 0
    <div>
      Element slot 0
    </div>
  </div>
</div>"
`;

exports[`Vue 3 component in a Vue 2 app reactivity 2`] = `
"<div>
  I'm Vue 2
  1


  Conditional
  <div title=\\"Attribute 1\\"> I'm Vue 3 Prop: 1
    Default slot 2


    Named slot 3
    <div>
      Element slot 4
    </div>
    Conditional slot
  </div>
</div>"
`;

exports[`Vue 3 component in a Vue 2 app reactivity 3`] = `
"<div>
  I'm Vue 2
  2

  <div title=\\"Attribute 2\\"> I'm Vue 3 Prop: 2
    Default slot 4

    <!---->
    Named slot 6
    <div>
      Element slot 8
    </div>
  </div>
</div>"
`;

exports[`Vue 3 component in a Vue 2 app reactivity 4`] = `
"<div>
  I'm Vue 2
  3


  Conditional
  <div title=\\"Attribute 3\\"> I'm Vue 3 Prop: 3
    Default slot 6


    Named slot 9
    <div>
      Element slot 12
    </div>
    Conditional slot
  </div>
</div>"
`;

exports[`Vue 3 component in a Vue 2 app reactivity 5`] = `
"<div>
  I'm Vue 2
  3


  Conditional
</div>"
`;

exports[`Vue 3 component in a Vue 2 app render w/ class, style, attrs, props, slots 1`] = `
"<div>
  I'm Vue 2

  I'm Vue 3 Setup Works Prop works! <div title=\\"attr inherited\\" class=\\"dynamic static\\" style=\\"color: red; margin: 0px;\\"></div>
  Default slot

  <div>some element</div>
  Named slot
  <div>
    Element slot
  </div>
</div>"
`;
